--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     }],
     "page_action": {
         "default_icon": "images/on.png",
-        "default_title": "icon"
+        "default_title": "NDS Update Moderation"
     }
 
 }
