--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,16 @@
 {
     "name": "NDS Updated Moderation",
     "description" : "Rendons l'interface de modération plus agréable",
-    "version": "9.1",
+    "version": "12",
     "manifest_version": 2,
     "content_scripts": [{
-        "css": ["clean.css", "messagerie.css"],
+        "css": ["css/clean.css", "css/messagerie.css"],
+        "js": ["js/nds-moderation-ui-ext.js"],
         "matches": ["https://nosdevoirs.fr/*"]
     }],
     "page_action": {
         "default_icon": "images/on.png",
-        "default_title": "NDS Update Moderation"
+        "default_title": "NDS Updated Moderation"
     }
 
 }
