--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,9 @@
     "page_action": {
         "default_icon": "images/on.png",
         "default_title": "NDS Updated Moderation"
-    }
-
+    },
+    "web_accessible_resources": [
+        "css/dark.css"
+    ]
 }
 
