--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
     "name": "NDS Updated Moderation",
     "description" : "Rendons l'interface de modération plus agréable",
-    "version": "9.82",
+    "version": "9.85",
     "manifest_version": 2,
     "content_scripts": [{
         "css": ["clean.css", "messagerie.css"],
-        "matches": ["https://nosdevoirs.fr/*"]
+        "matches": ["https://nosdevoirs.fr/*"],
+        "js": ["js/nds-moderation-ui-ext-v0.js"]
     }],
     "page_action": {
         "default_icon": "images/on.png",
