--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,15 @@
 {
     "name": "NDS Updated Moderation",
-    "description" : "Rendons l'interface de modération plus agréable",
-    "version": "10.35",
-    "manifest_version": 2,
+    "description": "Rendons l'interface de modération plus agréable",
+    "version": "11.6",
+    "manifest_version": 3,
     "content_scripts": [{
         "css": ["clean.css", "messagerie.css"],
         "matches": ["https://nosdevoirs.fr/*", "https://eodev.com/*", "https://brainly.in/*", "https://brainly.pl/*", "https://brainly.lat/*", "https://znanija.com/*", "https://brainly.ro/*", "https://brainly.com/*"],
         "js": ["js/nds-moderation-ui-ext-v0.js"]
     }],
-    "page_action": {
+    "action": {
         "default_icon": "images/on.png",
         "default_title": "NDS Update Moderation"
     }
-
 }
-
