--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "NDS Updated Moderation",
     "description": "Rendons l'interface de modération plus agréable",
-    "version": "11.6",
+    "version": "11.7",
     "manifest_version": 3,
     "content_scripts": [{
         "css": ["clean.css", "messagerie.css"],
@@ -11,5 +11,10 @@
     "action": {
         "default_icon": "images/on.png",
         "default_title": "NDS Update Moderation"
+    },
+    "icons": {
+        "16": "images/on16.png",
+        "48": "images/on48.png",
+        "128": "images/on128.png"
     }
 }
