--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "name": "NDS Updated Moderation",
     "description": "Rendons l'interface de modération plus agréable",
-    "version": "11.8",
+    "version": "11.82",
     "manifest_version": 3,
     "content_scripts": [{
         "css": ["clean.css", "messagerie.css"],
         "matches": ["https://nosdevoirs.fr/*", "https://eodev.com/*", "https://brainly.in/*", "https://brainly.pl/*", "https://brainly.lat/*", "https://znanija.com/*", "https://brainly.ro/*", "https://brainly.com/*"],
-        "js": ["js/nds-moderation-ui-ext-v0.js"]
+        "js": ["js/nds-moderation-ui.js"]
     }],
     "action": {
         "default_icon": "images/on.png",
